--- a/index.html
+++ b/index.html
@@ -24,12 +24,10 @@
         <a class="logo link" href="./index.html">Web<span>Studio</span></a>
         <ul class="menu list">
           <li class="menu-item">
-            <a class="menu-link link menu-link-studio" href="./index.html"
-              >Studio</a
-            >
+            <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="">Portfolio</a>
+            <a class="menu-link link" href="#portfolio">Portfolio</a>
           </li>
           <li class="menu-item">
             <a class="menu-link link" href="#adress">Contacts</a>
@@ -143,7 +141,7 @@
         </ul>
       </section>
       <!-- OUR PORTFOLIO -->
-      <section class="portfolio">
+      <section id="portfolio" class="portfolio">
         <h2 class="port-title">Our Portfolio</h2>
         <ul class="port-list list">
           <li class="port-item">
@@ -217,7 +215,7 @@
     </main>
     <!-- PAGE FOOTER -->
     <footer class="foot-contact">
-      <a class="link logo-foot" href="./index.html">Web<span>Studio</span></a>
+      <a class="link logo-foot" href="./index.html">Web<span>studio</span></a>
       <p class="foot-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
