--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a class="menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="#portfolio">Portfolio</a>
+            <a class="menu-link link" href="">Portfolio</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link link" href="#adress">Contacts</a>
+            <a class="menu-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -215,7 +215,9 @@
     </main>
     <!-- PAGE FOOTER -->
     <footer class="foot-contact">
-      <a class="link logo-foot" href="./index.html">Web<span>studio</span></a>
+      <a class="link logo-foot" href="./index.html"
+        >Web<span class="spn">Studio</span></a
+      >
       <p class="foot-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
